# autocomplete-enhance

./: .gitignore  cached_parser.pkl  parser.json  pyproject.toml
src/autocomplete_enhance/: jit_parser.py  json_autocomplete_cache.py  json_autocomplete_run.py  pickle_autocomplete_cache.py  pickled_autocomplete_run.py  target_script.py
src/autocomplete_enhance/sample_cli/: describe_github_user.py  describe_github_user2.py  greet.py  heavy.py  testcli.py  testcli2.py
